--- a/TestPApp/Src/New.fx.yaml
+++ b/TestPApp/Src/New.fx.yaml
@@ -1,7 +1,7 @@
 New As screen:
 
     btnTest As button:
-        Text: ="Button Test"
+        Text: ="Button Test 2"
         X: =40
         Y: =40
         ZIndex: =3
